crates/stackable-versioned/src/snapshots/stackable_versioned__tests__tests__fail@request_missing.json.snap
---
source: crates/stackable-versioned/src/tests.rs
expression: formatted
input_file: crates/stackable-versioned/fixtures/inputs/fail/request_missing.json
---
{
  "apiVersion": "apiextensions.k8s.io/v1",
  "kind": "ConversionReview",
  "response": {
    "uid": "",
    "result": {
      "status": "Failure",
      "code": 400,
      "message": "request missing in ConversionReview",
      "reason": "request missing in ConversionReview"
    },
    "convertedObjects": []
  }
}
